[add] - possible access to nordea internal repository created

--- a/aop/aop.gradle
+++ b/aop/aop.gradle
@@ -32,7 +32,14 @@ subprojects {
 
         afterEvaluate {
             repositories {
-                jcenter()
+//                maven {
+                    // nordea repository
+//                    url 'https://repo url'
+//                    credentials {
+//                        username = "username"
+//                        password = "password"
+//                    }
+//                }
             }
 
             compileJava {
