--- a/common/common.gradle
+++ b/common/common.gradle
@@ -23,7 +23,14 @@ subprojects {
 
         afterEvaluate {
             repositories {
-                jcenter()
+                // nordea repository
+//                maven {
+//                    url 'https://repo url'
+//                    credentials {
+//                        username = "username"
+//                        password = "password"
+//                    }
+//                }
             }
 
             compileJava {
